--- a/package.json
+++ b/package.json
@@ -4,15 +4,34 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www"
+    "devstart": "nodemon ./bin/www",
+    "test": "jest",
+    "lint": "eslint"
   },
   "dependencies": {
+    "babel-preset-es2017": "^6.24.1",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "global": "^4.3.2",
+    "mongoose": "^5.0.3",
     "morgan": "~1.9.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
+    "jest": "^19.0.2",
+    "supertest": "^3.0.0"
   }
 }
